gocometService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocomet-service
spec:
  externalName: hhu-prod-static.oss-cn-beijing-internal.aliyuncs.com
  type: ExternalName
